--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,8 @@
 *.synctex.gz
 *.toc
 .DS_Store
+.idea/vcs.xml
+.idea/modules.xml
+.idea/misc.xml
+.idea/inspectionProfiles/profiles_settings.xml
+.idea/104-public-knowledge-base.iml
