--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ latex/**/*.pdf
 .idea/misc.xml
 .idea/inspectionProfiles/profiles_settings.xml
 .idea/104-public-knowledge-base.iml
+.vscode/settings.json
