--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ latex/**/*.pdf
 .idea/inspectionProfiles/profiles_settings.xml
 .idea/104-public-knowledge-base.iml
 .vscode/settings.json
+lightning_logs
