--- a/vscode/extensions/my-own-vscode-extension/package.json
+++ b/vscode/extensions/my-own-vscode-extension/package.json
@@ -3,7 +3,8 @@
   "publisher": "YourongZhang",
   "displayName": "yz",
   "description": "",
-  "version": "0.0.2",
+  "version": "0.0.4",
+  "repository": {},
   "engines": {
     "vscode": "^1.74.2"
   },
