--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ latex/**/*.pdf
 .idea/inspectionProfiles/profiles_settings.xml
 .idea/104-public-knowledge-base.iml
 .vscode/settings.json
+
 lightning_logs
 ~$*
 *.so
+__pycache__
